--- a/popup/popup.css
+++ b/popup/popup.css
@@ -366,3 +366,21 @@ h4 {
   text-align: left;
   color: #cfffdf;
 }
+
+
+
+#download {
+  outline: none;
+  padding: 5px 2px;
+  margin: 0 8px;
+  color: aliceblue;
+  background-color: rgb(0, 0, 0);
+  border: 2px solid rgba(0, 0, 0, 0);
+  border-radius: 8px;
+  font-family: "Montserrat", sans-serif;
+}
+
+#download:hover {
+  border-bottom: 1px solid #cfffdf;
+  border-radius: 0px;
+}
